--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ tokio = { version = "1.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 tower-http = { version = "0.5", features = ["trace"] }
 lazy_static = "1.4"
+rusqlite = "0.28.0"
